frontend_tests/negative/builtin_min_arity/cmd/app/main.go
package main

func main() {
	_ = min()
}
